# riscv-on-rust

./: .gitmodules  Cargo.toml  log.txt
isa_tests/: add.elf  add.s  branch.elf  branch.s  jump_and_return.elf  jump_and_return.s  memory.elf  memory.s
qemu_playground/: hello.c  hello.s  microblaze.lds  print.s  qemu_virt.lds  stack.s  test.c  test_microblaze.elf
src/: main.rs
src/risc_soc/: cache.rs  cdb.rs  decode.rs  fetch.rs  instruction_asm.rs  memory_management_unit.rs  mod.rs  pipeline_stage.rs  risc_soc.rs  wire.rs
src/rv32/: cache.rs  decode.rs  fetch.rs  mod.rs  pipeline_stage.rs  rv32.rs
src/rv32_baremetal/: decode.rs  fetch.rs  mcu_cache.rs  mod.rs
src/rv32i_baremetal/: commit.rs  core.rs  decode.rs  execute.rs  fetch.rs  mcu_cache.rs  memory.rs  mod.rs  uart.rs  writeback.rs
