[package]
name = "riscv-on-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
json = "0.12.4"
object = "0.37.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
instruction-decoder = { path = "instruction-decoder" }
ahash = "0.8.12"
